tests/error/no_member.gw
#! [contains] does not have members - invalid use in dot expression
var int i;
i.nothing;

